--- a/assets/preload/data/Sped/sped-easy.json
+++ b/assets/preload/data/Sped/sped-easy.json
@@ -3,7 +3,7 @@
 		"speed": 1.7,
 		"stage": "stage",
 		"player1": "bf",
-		"player2": "Sonico",
+		"player2": "Epico Sonico",
 		"events": [],
 		"notes": [
 			{
